visitLocalVariableDeclarationNode and Arrays.asList instead of List.of