@@ -32,6 +32,7 @@ import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNameNode;
 import org.queenlang.transpiler.nodes.QueenNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -69,7 +70,7 @@ public abstract class QueenAnnotationNode implements AnnotationNode {
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.name);
+        return Arrays.asList(this.name);
     }
 
 }
