@@ -32,6 +32,7 @@ import com.github.javaparser.ast.expr.Expression;
 import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -84,7 +85,7 @@ public final class QueenBinaryExpressionNode implements BinaryExpressionNode {
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.left, this.right);
+        return Arrays.asList(this.left, this.right);
     }
 
     @Override
