@@ -32,6 +32,7 @@ import com.github.javaparser.ast.expr.Expression;
 import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -62,7 +63,7 @@ public final class QueenBracketedExpressionNode implements BracketedExpressionNo
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.expression);
+        return Arrays.asList(this.expression);
     }
 
     @Override
