@@ -32,6 +32,7 @@ import com.github.javaparser.ast.expr.Expression;
 import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -75,7 +76,7 @@ public final class QueenConditionalExpressionNode implements ConditionalExpressi
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.condition, this.thenExpr, this.elseExpr);
+        return Arrays.asList(this.condition, this.thenExpr, this.elseExpr);
     }
 
     @Override
