@@ -34,6 +34,7 @@ import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 import org.queenlang.transpiler.nodes.expressions.ExpressionNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -76,7 +77,7 @@ public final class QueenAssertStatementNode implements AssertStatementNode {
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.check, this.message);
+        return Arrays.asList(this.check, this.message);
     }
 
     @Override
