@@ -36,6 +36,7 @@ import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -87,7 +88,7 @@ public final class QueenCatchClauseNode implements CatchClauseNode {
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.parameter, this.blockStatements);
+        return Arrays.asList(this.parameter, this.blockStatements);
     }
 
     @Override
