@@ -36,6 +36,7 @@ import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 import org.queenlang.transpiler.nodes.expressions.ExpressionNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -121,7 +122,7 @@ public final class QueenIfStatementNode implements IfStatementNode {
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.condition, this.thenBlockStatements, this.elseBlockStatements);
+        return Arrays.asList(this.condition, this.thenBlockStatements, this.elseBlockStatements);
     }
 
     @Override
