@@ -36,6 +36,7 @@ import org.queenlang.transpiler.nodes.Named;
 import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -102,7 +103,7 @@ public final class QueenLabeledStatementNode implements LabeledStatementNode {
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.blockStatements);
+        return Arrays.asList(this.blockStatements);
     }
 
     @Override
