@@ -33,6 +33,7 @@ import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 import org.queenlang.transpiler.nodes.expressions.ExpressionNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -72,7 +73,7 @@ public final class QueenSwitchLabelNode implements SwitchLabelNode {
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.expressionNode);
+        return Arrays.asList(this.expressionNode);
     }
 
     @Override
