@@ -34,6 +34,7 @@ import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 import org.queenlang.transpiler.nodes.expressions.ExpressionNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -79,7 +80,7 @@ public final class QueenSynchronizedStatementNode implements SynchronizedStateme
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.syncExpression, this.blockStatements);
+        return Arrays.asList(this.syncExpression, this.blockStatements);
     }
 
     @Override
