@@ -36,6 +36,7 @@ import org.queenlang.transpiler.nodes.Position;
 import org.queenlang.transpiler.nodes.QueenNode;
 import org.queenlang.transpiler.nodes.expressions.ExpressionNode;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -102,7 +103,7 @@ public final class QueenWhileStatementNode implements WhileStatementNode {
 
     @Override
     public List<QueenNode> children() {
-        return List.of(this.expression, this.blockStatements);
+        return Arrays.asList(this.expression, this.blockStatements);
     }
 
     @Override
